--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     display: block;
     width: 100%;
     text-align: center;
-    padding: 20px;
+    padding: 50px 0 50px 0;
         }
         .container {
             margin: 0 auto;
